# speech_llm

./: pyproject.toml
benchmarks/: audio_loader.py  librispeech_df_maker.py  mms-1b-all.py  seamless.py  wav2vec.py  wer.py  whispers.py  whispers_tunned.py
fine-tune/: whisper_tunning.ipynb
modulo/src/speech_llm/: bark_tts.py  llama.py  pipeline.py  whisper.py
notebooks/: test.ipynb
src/speech_llm/: bark_tts.py  llama.py  node.py  whisper.py
