[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "speech_llm"
version = "0.1.0"
authors =  [
    {name = "João Pedro Lopes de Camargo"},
]
# Apache 2.0
license = {file = "LICENSE"}

dependencies = [
    "nltk",
    "numpy",
    "torch",
    "transformers",
    "peft",
    "bitsandbytes"
]

# [project.urls]
# source = "https://github.com/suno-ai/bark"
